Corrected menu item spacing

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -121,13 +121,16 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
     list-style-type: none;
     transform: translate(0);
     gap: 25px;
     font-size: 20px;
     margin: 0;
     padding: 0;
+  }
+
+  .Navbar ul li {
+    width: auto;
+    height: auto;
   }
 }
